manifests/media-entertainment/base/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  labels:
    gateway: private
spec:
  hostnames:
    - jellyfin.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
